# Lanelet2_standalone

./: .gitignore  CMakeLists.txt  README.md  setup.py
cmake/: lanelet2Config.cmake
lanelet2_python/python_api/: core.cpp  geometry.cpp  routing.cpp
pylanelet2/lanelet2/: __init__.py  core.py  geometry.py  io.py  projection.py  routing.py  traffic_rules.py
